feat: Implement profit calculation for user tree with BigNumber.js
- Added bignumber.js library for arbitrary-precision arithmetic.
- Created user tree structure with nested children and levels.
- Developed profit calculation logic considering user levels and stakes.
- Introduced types for User, ProfitRecord, and ChildInfo for better type safety.
- Implemented functions to calculate daily profits and total rewards based on user hierarchy.
- Enhanced code organization by separating user tree and calculation logic into distinct files.

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@types/node": "^22.14.1",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "bignumber.js": "^9.2.1"
   }
 }
